Missing default value traefik_post_config_restart_on_change

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 
 traefik_post_install_enabled: true
+traefik_post_config_restart_on_change: true
 
 traefik_versions_url: https://github.com/containous/traefik/releases
 traefik_repo_url: "{{ traefik_versions_url }}/download"
