--- a/tasks/traefik_pre_install.yml
+++ b/tasks/traefik_pre_install.yml
@@ -25,7 +25,7 @@
 
     - name: Set Consul facts
       set_fact:
-        consul_bin: "{{ systemd_result.status.ExecStart | regex_replace('^.+path=(.+?)\\s+.+?$','\\1') }}"
+        consul_bin: "{{ consul_systemd.status.ExecStart | regex_replace('^.+path=(.+?)\\s+.+?$','\\1') }}"
         configure_consul: true
 
 - name: Check traefik binary
