[docker] skip pre-tasks

--- a/tasks/traefik_pre_install.yml
+++ b/tasks/traefik_pre_install.yml
@@ -1,5 +1,7 @@
 ---
 
+# TODO: check traefik_http_proxy variable
+
 - name: Check consul service data
   when:
     - traefik_consul == None
@@ -16,15 +18,11 @@
     - not traefik_metrics_influxdb_endpoint | urlsplit('port') is defined
   fail: msg="traefik_metrics_influxdb_endpoint must be a URL (http://endpoint:port or udp://endpoint:port)"
 
-- name: Check running services
-  service_facts:
-
 - name: Set default facts
   set_fact:
     use_firewalld: false
     configure_consul: false
 
-- name: Get Consul details
   when:
     - traefik_config_consul | lower == 'true'
     - ansible_facts.services | map('quote') | join(',') | regex_search('consul')
@@ -38,40 +36,45 @@
         consul_bin: "{{ consul_systemd.status.ExecStart | regex_replace('^.+path=(.+?)\\s+.+?$','\\1') }}"
         configure_consul: true
 
-- name: Check traefik binary
-  register: traefik_bin_stats
-  stat: path={{ traefik_install_prefix }}/traefik get_checksum=no
-
-- name: Check traefik version
-  when:
-    - traefik_bin_stats.stat.exists
-  register: traefik_bin_version
-  shell: >
-    "{{ traefik_install_prefix }}"/traefik version \
-    | awk -Fv '/^Version/ {print $2}'
-
-- name: Set the version to use
-  when: traefik_package_state == 'latest'
+- when: traefik_use_docker | lower == 'false'
   block:
-    - name: Get last version online
-      register: last_version
-      run_once: true
+    - name: Check running services
+      service_facts:
+
+    - name: Check traefik binary
+      register: traefik_bin_stats
+      stat: path={{ traefik_install_prefix }}/traefik get_checksum=no
+
+    - name: Check traefik version
+      when:
+        - traefik_bin_stats.stat.exists
+      register: traefik_bin_version
       shell: >
-        curl \
-            {% if traefik_http_proxy is defined and traefik_http_proxy != '' %}-x {{ traefik_http_proxy }}{% endif %} \
-            -s {{ traefik_versions_url }} \
-        | fgrep /containous/traefik/tree/ \
-        | awk '{print $2}' \
-        | awk -F/ '{gsub("\"","");print $NF}'
+        "{{ traefik_install_prefix }}"/traefik version \
+        | awk -Fv '/^Version/ {print $2}'
 
-    - set_fact: traefik_version="{{ last_version.stdout }}"
+    - name: Set the version to use
+      when: traefik_package_state == 'latest'
+      block:
+        - name: Get last version online
+          register: last_version
+          run_once: true
+          shell: >
+            curl \
+                {% if traefik_http_proxy is defined and traefik_http_proxy | length > 0 %}-x {{ traefik_http_proxy }}{% endif %} \
+                -s {{ traefik_versions_url }} \
+            | fgrep /containous/traefik/tree/ \
+            | awk '{print $2}' \
+            | awk -F/ '{gsub("\"","");print $NF}'
 
-- name: Manage non-root traefik user
-  when:
-    - traefik_user != 'root'
-  block:
-    - name: Add the user {{ traefik_user }}
-      user:
-        name: "{{ traefik_user }}"
-        comment: "Traefik daemon user"
+        - set_fact: traefik_version="{{ last_version.stdout }}"
+
+    - name: Manage non-root traefik user
+      when:
+        - traefik_user != 'root'
+      block:
+        - name: Add the user {{ traefik_user }}
+          user:
+            name: "{{ traefik_user }}"
+            comment: "Traefik daemon user"
 
