--- a/tasks/traefik_post_install.yml
+++ b/tasks/traefik_post_install.yml
@@ -32,7 +32,7 @@
     - name: Start the container
       docker_container:
         state: started
-        name: traefik-server
+        name: "{{ traefik_container_name }}"
         image: "{{ traefik_docker_image }}"
         published_ports: "{{ traefik_docker_published_ports }}"
         volumes: "traefik_docker_volumes }}"
