--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -22,7 +22,7 @@
   command: firewall-cmd --reload
 
 - name: reload consul
-  command: "{{ consul_bin }} reload"
+  command: consul reload
 
 - name: delete repo key file
   file: path="{{ repo_key_result.dest }}" state=absent
